--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,34 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<header>
+<div class="link">
+  <div align ="right">
+	<%= link_to 'About', new_webpage_path %>
+	&nbsp;&nbsp;&nbsp;&nbsp;
+  </div>
+</div>
+</header>
 
+<br class="clear" />
+
+<div class="container">
 <%= yield %>
+</div>
+
+<div class="footer">
+    <div class="container">
+    	<div class ="col-xs-6">
+    		<%= link_to "Back to Main Page", webpage_index_path %>
+    	</div>
+    	<div class="col-xs-6">
+        Proudly made by Farrah Lee
+        <br />
+        Want to build your own Web App? - <a href="http://thefirehoseproject.com">Learn how to code here</a>
+    	</div>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
