--- a/app/views/webpage/index.html.erb
+++ b/app/views/webpage/index.html.erb
@@ -1,4 +1,5 @@
 <div class="box col-xs-10 col-xs-offset-1">
+	<h1><%= @quote.inspect %></h1>
  <center>
 	<%= image_tag 'welcome.gif', :class => 'img-responsive' %>
 	</br>
